--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -1,4 +1,5 @@
-name: CI/CD
+name: CI
+
 on:
   push:
     branches: [ "main" ]
@@ -9,22 +10,31 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: [3.7, 3.8, 3.9]
     steps:
       - uses: actions/checkout@v3
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v2
-        with:
-          python-version: ${{ matrix.python-version }}
-      - name: install packages
-        run: make install
-      - name: lint
-        run: make lint
+      - name : install packages
+        run : make install
       - name: test
         run: make test
-      - name: format
-        run: make format
-      - name: deploy
-        run: make deploy
+      - name : format
+        run : make format
+      - name: lint
+        run: make lint
+      - name: Archive and Upload Artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: ml_pipeline-artifacts
+          path: ${{ github.workspace }}
+        
+      - name: Save to repository
+        env:
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+        run: |
+          echo GH_TOKEN: "${GH_TOKEN}"
+          git config --global user.name 'github-actions'
+          git config --local user.email "action@github.com"
+          git add .
+          git commit -m "Added Results" || echo "ignore commit failure, proceed"
+          git push
+          
+      
